form - card comp

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="h-100 bg-dark text-white">
+<body class="h-100 bg-dark text-bg-dark">
   <app-root class="d-flex flex-column h-100"></app-root>
 </body>
 
